[package]
authors = ["Jorge Aparicio <japaricious@gmail.com>"]
description = "`Cell` with volatile read / write operations"
documentation = "https://docs.rs/vcell"
keywords = ["no-std", "volatile", "cell"]
license = "MIT OR Apache-2.0"
name = "vcell"
repository = "https://github.com/japaric/vcell"
version = "0.1.3"

[dependencies.klee-rs]
version = "0.1.0"
optional = true

[dependencies.cortex-m-asm]
git = "https://github.com/markhakansson/cortex-m-asm.git"
version = "0.1.0"
optional = true

[features]
const-fn = [] # Unused, but kept for backwards compatibility
klee-analysis = [ "klee-rs" ]
klee-replay = ["cortex-m-asm"]

